
== Version 0.70 11/20/2008 ==

* Tweak the timeslice code a little to give more reliable and consistent CPU usage
* Add some miniprofiling to a few potential hotspots
* Do a better job of automatically reporting some common problems
* Fixed issue with /qh hide not properly giving up CPU time
* Fix for crash bug in battlegrounds
* Rework the location recording system, dump old "traveled" data ( :( )
* Record zone data

== Version 0.69 11/18/2008 ==

* Small host of minor bugfixes
* First shot at implementing the new "player" objective type
* Gathering "traveled" data and "realms" data
* Add /qh donate and rig up a little reminder

== Version 0.68 11/16/2008 ==

* Database update, obviously
* Possibly fix that old mutation-passes error
* Clean up the codebase post-Wrath
* New coroutine system to handle criteria and routing in a similar fashion
* Rename /qh recycle to /qh top, add some more performance debug output
* Reorganize /qh help

== Version 0.67 11/14/2008 ==

* No notable changes besides a database update

== Version 0.66 11/10/2008 ==

* Fix French typo
* Add more data, fix up the build system a little
* More private server data removed (stop submitting private server data guys)
* Added an achievement monitor that currently does very little besides waste CPU, but will be necessary in the next data gathering system

== Version 0.65 10/29/2008 ==

* Fix map tooltip again, break map tooltip scaling again :(

== Version 0.64 10/28/2008 ==

* Add better tests for various errors that are cropping up frequently
* /qh hide is a little more emphatic about how hidden it should really be
* QH now respects UI scaling on tooltips
* Less map change event spam
* Fix some positions in EPL and Stormwind

== Version 0.63 10/18/2008 ==

* Rename Astrolabe in the hopes that overly-zealous packagers won't try to remove it
* Fix the nil comparison bug with flight paths finally (I hope)

== Version 0.62 10/16/2008 ==
