@@ -1,6 +1,7 @@
 
 == Version 0.70 11/20/2008 ==
 
+* Fixed bug that may have caused missing databases or highly corrupted data in non-enUS locales
 * Tweak the timeslice code a little to give more reliable and consistent CPU usage
 * Add some miniprofiling to a few potential hotspots
 * Do a better job of automatically reporting some common problems
